crates/analyzer/tests/snapshots/errors__overflow_u16_neg.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `u16`
  ┌─ [snippet]:3:7
  │
3 │   u16(-1)
  │       ^^ does not fit into type `u16`

error: Can not apply unary operator
  ┌─ [snippet]:3:7
  │
3 │   u16(-1)
  │       ^^ Expected unsigned type `u16`. Unary operator `-` can not be used here.


